--- a/main.html
+++ b/main.html
@@ -12,65 +12,72 @@
             <style>
               body {background: #E5E5E5; }
             </style>
-          
           </head>
-          
-          <body>
-            <div class=e1_3>               <div  class="e4_8"></div>               <div  class="e4_9"></div>               <span  class="e4_10">Contact Us</span>               <div  class="e4_6"></div>               <div  class="e4_4"></div>                 <div class=e5_109>                 <a href="./about.html"  class="e5_110"></a>                 <a href="./about.html"  class="e5_111">About Us</a>                 </div>               <span  class="e5_4">Welcome to site of ordering food Bubaleh!</span>               <span  class="e5_5">Here you can find all the information  you need  about this food chain and order food.</span>
-              <div class=e5_9>
-                <a href="./shop.html"  class="e5_7"></a>
-                <a href="./shop.html"  class="e5_8">Order now</a>
-              </div>
-              <div  class="e5_10"></div>
-              <div  class="e5_19"></div>
-              <div  class="e5_11"></div>
-              <div class=e20_2>
-                <span  class="e5_24">Message</span>
-                <div   class="input4">
-                    <input type="text" />
+
+
+      <body>
+        <div  class="pagecover"></div>
+        <div class="contactus-block">
+            <span class="contactus">Contact Us</span>
+        </div>
+        <div  class="photoUpRight"></div>
+        <div class="mainMenu">
+            <div class=Logo>
+                <div class="LogoP1"></div>
+                <div class="LogoP2"></div>
+            </div>
+            <span class="Welcoming">Welcome to site of ordering food Bubaleh!</span>
+            <span class="WelcomeDesc">Here you can find all the information  you need  about this food chain and order food.</span>
+            <a href="./about.html" class=AboutusButton>
+                <span class="Aboutus">About Us</span>
+            </a>
+            <a href="./shop.html" class=OrdernowButton>
+                <span class="Ordernow">Order now</span>
+            </a>
+        </div>
+        <div class="contacting">
+            <div class=Contactinfo>
+                <span class="phonenumber">853-195-9918</span>
+                <span class="emailinfo">info@bubaleh.com</span>
+                <span>500 Terry Francine Street, San Francisco, CA 94158</span>
+            </div>
+            <div class=ContactingInput>
+                <span class="FirstName">First name</span>
+                <div class="input1">
+                    <input class="beautifulInput" type="text" />
                 </div>
-                <span  class="e5_22">Last name</span>
-                <div   class="input2">
-                    <input type="text" />
+                <span class="LastName">Last name</span>
+                <div class="input2">
+                    <input class="beautifulInput" type="text" />
                 </div>
-                <span  class="e5_23">Email</span>
-                <div   class="input3">
-                    <input type="text" />
+                <span class="Email">Email</span>
+                <div class="input3">
+                    <input class="beautifulInput1" type="text" />
                 </div>
-                <span  class="e5_21">First name</span>
-                <div   class="input1">
-                    <input type="text" />
+                <span class="Message">Message</span>
+                <div class="input4">
+                    <input class="beautifulInput1" type="text" />
                 </div>
-                <div  class="e5_12"></div>
-                <div  class="e5_14"></div>
-                <div  class="e5_15"></div>
-                <div  class="e5_13"></div>
-              </div>
-              <div class=e20_3>
-                <span  class="e5_20">853-195-9918</span>
-                <span  class="e5_17">info@bubaleh.com</span>
-                <span  class="e5_16">500 Terry Francine Street, San Francisco, CA 94158</span>
-              </div>
-              <div class=e5_27>
-                <div  class="e5_25"></div>
-                <span  class="e5_26">Send</span>
-              </div>
-              <div class=e20_4>
-                <span  class="e5_28">Opening Hours</span>
-                <span  class="e5_29">Mon - Fri
-                8:00 am – 8:00 pm
+            </div>
+            <div class="SendButton">
+                <span class="Send">Send</span>
+            </div>
+            <div class="OpeningInfo">
+                <span class="OpeningHours">Opening Hours</span>
+                <span class="MonFri">
+                    Mon - Fri
+                    8:00 am – 8:00 pm
                 </span>
-                <span  class="e5_30">Saturday
+                <span class="Saturday">
+                    Saturday
                     9:00 am – 7:00 pm
                 </span>
-                <span  class="e5_31">Sunday
+                <span class="Sunday">
+                    Sunday
                     9:00 am – 9:00 pm
                 </span>
-              </div>
-              <div class=e5_126>
-                <div  class="e5_125"></div>
-                <div  class="e5_119"></div>
-              </div>
             </div>
-          </body>
+        </div>
+        <div  class="photoDownLeft"></div>
+      </body>
 </html>
