--- a/shaurma.html
+++ b/shaurma.html
@@ -12,50 +12,40 @@
             <style>
               body {background: #E5E5E5; }
             </style>
-          
           </head>
-          
+
           <body>
-            <div class=e5_67>               <div  class="e5_68"></div>               <div  class="e5_69"></div>               <span  class="e5_70">100.00 UAH</span>               <span  class="e5_71">60.00 UAH</span>               <span  class="e5_72">40.00 UAH</span>               <span  class="e5_73">Chicken nuggets</span>               <span  class="e5_74">French fries</span>               <span  class="e5_75">Mahentohen</span>               <div class=e5_76>                 <div  class="e5_77"></div>                 <span  class="e5_78">Here you can order your food</span>
-              </div>
-              <div  class="e5_79"></div>
-              <div  class="e5_80"></div>
-              <div  class="e5_81"></div>
-              <div  class="e5_82"></div>
-              <span  class="e5_83">Mega burger</span>
-              <span  class="e5_84">80.00 UAH</span>
-              <div  class="e5_85"></div>
-              <div  class="e5_86"></div>
-              <div class=e5_93>
-                <div  class="e5_94"></div>
-                <span  class="e5_92">Mahentohen</span>
-                <span  class="e5_87">100.00 UAH</span>
-              </div>
-              <div  class="e5_99"></div>
-              <span  class="e5_102">Amount</span>
-              <div  class="e5_103"></div>
-              <div  class="e5_104"></div>
-              <span  class="e5_105">Add to cart</span>
-              <span  class="e5_135">Description</span>
-              <div class=e5_150>
-                <div  class="e5_151"></div>
-                <div class=e5_152>
-                  <div  class="e5_153"></div>
-                  <div  class="e5_154"></div>
+            <div  class="pagecoverOrder"></div>
+            <div class="MenuBlock">
+                <div class="Shawerma"></div>
+                <div class="ShawermaInfo">
+                    <div class="NameBlock">
+                        <span class="Name">Mahentohen</span>
+                        <span class="Price">100.00 UAH</span>
+                    </div>
+                    <span class="Amount">Amount</span>
+                    <input type="text" class="AmountInput" />
+                    <div class="AddToCartButton">
+                        <span class="AddToCart">Add to cart</span>
+                    </div>
                 </div>
-                <a href="./main.html"  class="e5_155">Main</a>
-                <span  class="e5_156">/</span>
-                <a href="./shop.html"  class="e5_157">Ordering</a>
-                <span  class="e5_158">/</span>
-              </div>
-              <span  class="e5_159">Mahentohen</span>
-              <div class=e5_183>
-                <div  class="e5_184"></div>
-                <span  class="e5_185">853-195-9918</span>
-                <div  class="e5_186"></div>
-                <span  class="e5_187">500 Terry Francine Street, San Francisco, CA 94158</span>
-                <span  class="e5_188">info@bubaleh.com</span>
-              </div>
+            </div>
+            <span  class="Description">Description</span>
+            <div class="header">
+                <div class="LogoHeader">
+                    <div class="LogoHeaderP1"></div>
+                    <div class="LogoHeaderP2"></div>
+                </div>
+                <a href="./main.html" class="MainRef">Main</a>
+                <span class="divider">/</span>
+                <a href="./shop.html" class="OrderingRef">Ordering</a>
+                <span class="divider2">/</span>
+                <span class="HeaderMahentohen">Mahentohen</span>
+            </div>
+            <div class="footer">
+                <span  class="footerPhoneNumber">853-195-9918</span>
+                <span  class="footerAdress">500 Terry Francine Street, San Francisco, CA 94158</span>
+                <span  class="footerEmail">info@bubaleh.com</span>
             </div>
           </body>
 </html>
