--- a/shop.html
+++ b/shop.html
@@ -16,45 +16,45 @@
           </head>
           
           <body>
-            <div class=e5_32>               <div  class="e5_33"></div>               <div  class="e5_34"></div>               <span  class="e5_48">100.00 UAH</span>               <span  class="e5_49">60.00 UAH</span>               <span  class="e5_47">40.00 UAH</span>               <span  class="e5_45">Chicken nuggets</span>               <span  class="e5_43">French fries</span>               <span  class="e5_44">Mahentohen</span>               <div class=e5_37>                 <div  class="e5_35"></div>                 <span  class="e5_36">Here you can order your food</span>               </div>               <div  class="e5_38"></div>               <div  class="e5_41"></div>               <div  class="e5_39"></div>               <div  class="e5_40"></div>               <span  class="e5_42">Mega burger</span>               <span  class="e5_46">80.00 UAH</span>               <div  class="e5_50"></div>               <div  class="e5_51"></div>               <div class=e5_58>                 <div  class="e5_59"></div>                 <span  class="e5_60">Here you can order your food</span>
-              </div>
-              <div class=e20_8>
-                <span  class="e5_53">60.00 UAH</span>
-                <span  class="e5_55">Chicken nuggets</span>
-                <div  class="e5_62"></div>
-              </div>
-              <div class=e20_6>
-                <span  class="e5_54">40.00 UAH</span>
-                <span  class="e5_56">French fries</span>
-                <div  class="e5_63"></div>
-              </div>
-              <div class=e20_7>
-                <a href="./shaurma.html"  class="e5_52">100.00 UAH</a>
-                <a href="./shaurma.html"  class="e5_57">Mahentohen</a>
-                <a href="./shaurma.html"  class="e5_64"></a>
-              </div>
-              <div class=e20_5>
-                <div  class="e5_61"></div>
-                <span  class="e5_65">Mega burger</span>
-                <span  class="e5_66">80.00 UAH</span>
-              </div>
-              <div class=e5_149>
-                <div  class="e5_127"></div>
-                <div class=e5_128>
-                  <div  class="e5_129"></div>
-                  <div  class="e5_130"></div>
+              <div  class="pagecoverShop"></div>
+              <div class="MenuBlock">
+                <div class="HereToOrderBlock">
+                    <span class="HereToOrder">Here you can order your food</span>
                 </div>
-                <a href="./main.html"  class="e5_131">Main</a>
-                <span  class="e5_132">/</span>
-                <span  class="e5_133">Ordering</span>
-               </div>
-              <div class=e5_189>
-                <div  class="e5_190"></div>
-                <span  class="e5_191">853-195-9918</span>
-                <div  class="e5_192"></div>
-                <span  class="e5_193">500 Terry Francine Street, San Francisco, CA 94158</span>
-                <span  class="e5_194">info@bubaleh.com</span>
+                <div class="BurgerOrder">
+                    <div class="Burger"></div>
+                    <span class="burgerText">Mega burger</span>
+                    <span class="burgerPrice">80.00 UAH</span>
+                </div>
+                <div class=FriesOrder>
+                    <div class="Fries"></div>
+                    <span class="FriesText">French fries</span>
+                    <span class="FriesPrice">40.00 UAH</span>
+                </div>
+                <a href="./shaurma.html" class="ShaurmaOrder">
+                    <span class="Shaurma"></span>
+                    <span class="ShaurmaText">Mahentohen</span>
+                    <span class="ShaurmaPrice">100.00 UAH</span>
+                </a>
+                <div class="ChickenOrder">
+                    <div class="Chicken"></div>
+                    <span class="ChickenText">Chicken nuggets</span>
+                    <span class="ChickenPrice">60.00 UAH</span>
+                </div>
               </div>
+            <div class="header">
+                <div class="LogoHeader">
+                    <div class="LogoHeaderP1"></div>
+                    <div class="LogoHeaderP2"></div>
+                </div>
+                <a href="./main.html"  class="MainRef">Main</a>
+                <span  class="divider">/</span>
+                <span  class="OrderingRef">Ordering</span>
+            </div>
+            <div class="footer">
+                <span  class="footerPhoneNumber">853-195-9918</span>
+                <span  class="footerAdress">500 Terry Francine Street, San Francisco, CA 94158</span>
+                <span  class="footerEmail">info@bubaleh.com</span>
             </div>
           </body>
  </html>
