--- a/about.html
+++ b/about.html
@@ -16,38 +16,39 @@
           </head>
           
           <body>
-            <div class=e5_107>
-              <div  class="e5_108"></div>
-              <div  class="e5_112"></div>
-              <div  class="e5_116"></div>
-              <span  class="e5_115">Welcome to our food ordering site! We are a team of people working to provide you with the most convenient and fast process of ordering and delivering food from various establishments.
-We understand how important it is to receive quality and delicious food on time, so we work to ensure that each of your orders is processed as quickly as possible and with the highest quality. Our partners are the best restaurants and kitchens from different cities, offering a wide selection of dishes and culinary trends.
-We use modern technologies and provide safe and convenient online payment. Our mission is to provide you with the most comfortable process of ordering and delivering food at any time of the day or night.
-Thank you for choosing our food ordering service! Please contact us if you have any questions or suggestions for improving our service. We are always ready to help you!</span>
-              <span  class="e5_113">About Us</span>
-              <span  class="e5_114">Finding inspiration everywhere</span>
-              <span  class="e5_117">Our History</span>
-              <span  class="e5_118">Our story began with a simple idea - to make the process of ordering and delivering food as comfortable and fast as possible for our customers. We were tired of spending a lot of time and effort on finding the right restaurant, placing an order and waiting for delivery. We understood that in our fast-paced world, where people prefer speed and convenience, such a process could be improved.
-We started our activity as a small startup that offered orders only from a few restaurants in our city. However, our service has found its supporters, and we have expanded our offer, inviting more and more restaurants and kitchens to cooperate.
-Today, we are happy to say that we have taken a significant step towards our goal. We cooperate with many restaurants and kitchens in different cities of the country and can offer our customers a wide selection of dishes and directions.
-We understand that the food ordering and delivery industry is evolving rapidly, so we are constantly improving our service and looking for new ways to improve our services. We believe that our story is just beginning, and we are happy to share our successes and achievements with you. Thank you for choosing our food ordering service, and we look forward to seeing you among our customers.</span>
-              <div class=e5_160>
-                <div  class="e5_161"></div>
-                <div class=e5_162>
-                  <div  class="e5_163"></div>
-                  <div  class="e5_164"></div>
+              <div  class="pagecover"></div>
+              <div class="coverAboutUs">
+                  <span class="AboutUsH1">About Us</span>
+                  <span class="AboutUsH2">Finding inspiration everywhere</span>
+                  <span class="AboutP1">
+                      Welcome to our food ordering site! We are a team of people working to provide you with the most convenient and fast process of ordering and delivering food from various establishments.
+                      We understand how important it is to receive quality and delicious food on time, so we work to ensure that each of your orders is processed as quickly as possible and with the highest quality. Our partners are the best restaurants and kitchens from different cities, offering a wide selection of dishes and culinary trends.
+                      We use modern technologies and provide safe and convenient online payment. Our mission is to provide you with the most comfortable process of ordering and delivering food at any time of the day or night.
+                      Thank you for choosing our food ordering service! Please contact us if you have any questions or suggestions for improving our service. We are always ready to help you!
+                  </span>
+                  <span class="OurHistory">Our History</span>
+                  <span class="AboutP2">
+                      Our story began with a simple idea - to make the process of ordering and delivering food as comfortable and fast as possible for our customers. We were tired of spending a lot of time and effort on finding the right restaurant, placing an order and waiting for delivery. We understood that in our fast-paced world, where people prefer speed and convenience, such a process could be improved.
+                      We started our activity as a small startup that offered orders only from a few restaurants in our city. However, our service has found its supporters, and we have expanded our offer, inviting more and more restaurants and kitchens to cooperate.
+                      Today, we are happy to say that we have taken a significant step towards our goal. We cooperate with many restaurants and kitchens in different cities of the country and can offer our customers a wide selection of dishes and directions.
+                      We understand that the food ordering and delivery industry is evolving rapidly, so we are constantly improving our service and looking for new ways to improve our services. We believe that our story is just beginning, and we are happy to share our successes and achievements with you. Thank you for choosing our food ordering service, and we look forward to seeing you among our customers.
+                  </span>
+              </div>
+              <div  class="TeamPhoto"></div>
+
+              <div class="header">
+                <div class="LogoHeader">
+                  <div  class="LogoHeaderP1"></div>
+                  <div  class="LogoHeaderP2"></div>
                 </div>
-                <a href="./main.html"  class="e5_165">Main</a>
+                <a href="./main.html"  class="MainRef">Main</a>
               </div>
-              <span  class="e5_168">/</span>
-              <span  class="e5_169">About Us</span>
-              <div class=e5_170>
-                <div  class="e5_171"></div>
-                <span  class="e5_182">853-195-9918</span>
-                <div  class="e5_181"></div>
-                <span  class="e5_178">500 Terry Francine Street, San Francisco, CA 94158</span>
-                <span  class="e5_179">info@bubaleh.com</span>
+              <span  class="divider">/</span>
+              <span  class="AboutUsHeader">About Us</span>
+              <div class="footerAboutUs">
+                <span  class="footerPhoneNumber">853-195-9918</span>
+                <span  class="footerAdress">500 Terry Francine Street, San Francisco, CA 94158</span>
+                <span  class="footerEmail">info@bubaleh.com</span>
               </div>
-            </div>
           </body>
 </html>
