--- a/shaurma.html
+++ b/shaurma.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <span  class="Description">Description</span>
-            <div class="header">
+            <nav class="header">
                 <div class="LogoHeader">
                     <div class="LogoHeaderP1"></div>
                     <div class="LogoHeaderP2"></div>
@@ -41,11 +41,11 @@
                 <a href="./shop.html" class="OrderingRef">Ordering</a>
                 <span class="divider2">/</span>
                 <span class="HeaderMahentohen">Mahentohen</span>
-            </div>
-            <div class="footer">
+            </nav>
+            <footer class="footer">
                 <span  class="footerPhoneNumber">853-195-9918</span>
                 <span  class="footerAdress">500 Terry Francine Street, San Francisco, CA 94158</span>
                 <span  class="footerEmail">info@bubaleh.com</span>
-            </div>
+            </footer>
           </body>
 </html>
