--- a/about.html
+++ b/about.html
@@ -33,22 +33,21 @@
                       Today, we are happy to say that we have taken a significant step towards our goal. We cooperate with many restaurants and kitchens in different cities of the country and can offer our customers a wide selection of dishes and directions.
                       We understand that the food ordering and delivery industry is evolving rapidly, so we are constantly improving our service and looking for new ways to improve our services. We believe that our story is just beginning, and we are happy to share our successes and achievements with you. Thank you for choosing our food ordering service, and we look forward to seeing you among our customers.
                   </span>
-              </div>
+               </div>
               <div  class="TeamPhoto"></div>
-
-              <div class="header">
+              <nav class="header">
                 <div class="LogoHeader">
                   <div  class="LogoHeaderP1"></div>
                   <div  class="LogoHeaderP2"></div>
                 </div>
                 <a href="./main.html"  class="MainRef">Main</a>
-              </div>
+              </nav>
               <span  class="divider">/</span>
               <span  class="AboutUsHeader">About Us</span>
-              <div class="footerAboutUs">
+              <footer class="footerAboutUs">
                 <span  class="footerPhoneNumber">853-195-9918</span>
                 <span  class="footerAdress">500 Terry Francine Street, San Francisco, CA 94158</span>
                 <span  class="footerEmail">info@bubaleh.com</span>
-              </div>
+              </footer>
           </body>
 </html>
