--- a/shop.html
+++ b/shop.html
@@ -42,7 +42,7 @@
                     <span class="ChickenPrice">60.00 UAH</span>
                 </div>
               </div>
-            <div class="header">
+            <nav class="header">
                 <div class="LogoHeader">
                     <div class="LogoHeaderP1"></div>
                     <div class="LogoHeaderP2"></div>
@@ -50,11 +50,11 @@
                 <a href="./main.html"  class="MainRef">Main</a>
                 <span  class="divider">/</span>
                 <span  class="OrderingRef">Ordering</span>
-            </div>
-            <div class="footer">
+            </nav>
+            <footer class="footer">
                 <span  class="footerPhoneNumber">853-195-9918</span>
                 <span  class="footerAdress">500 Terry Francine Street, San Francisco, CA 94158</span>
                 <span  class="footerEmail">info@bubaleh.com</span>
-            </div>
+            </footer>
           </body>
  </html>
