--- a/main.html
+++ b/main.html
@@ -1,18 +1,20 @@
 <html lang="en">
-          <head>
-            <meta charset="utf-8">
-          
-            <title>Bubaleh site</title>
-            <meta name="description" content="Bubaleh">
-            <meta name="author" content="Diasamidze Bubaleh">
-            <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bubaleh site</title>
+    <meta name="description" content="Bubaleh">
+    <meta name="author" content="Diasamidze Bubaleh">
+    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
 
-            <link rel="stylesheet" href="styles.css">
-            
-            <style>
-              body {background: #E5E5E5; }
-            </style>
-          </head>
+    <link rel="stylesheet" href="styles.css">
+
+    <style>
+        body {
+            background: #E5E5E5;
+        }
+    </style>
+</head>
 
 
       <body>
